# RepoClinic

./: .dockerignore  .env.example  .env.langfuse.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  docker-compose.langfuse.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
src/repoclinic/: __init__.py  __main__.py  cli.py  constants.py  runtime_env.py
src/repoclinic/agents/: __init__.py  context_compactor.py  executor.py
src/repoclinic/artifacts/: __init__.py  generator.py
src/repoclinic/config/: __init__.py  loader.py  model_factory.py  models.py  token_budget.py
src/repoclinic/flow/: __init__.py  repoclinic_flow.py  state.py  transition_store.py
src/repoclinic/observability/: __init__.py  run_manifest.py  tracing.py
src/repoclinic/resilience/: __init__.py  retry.py
src/repoclinic/scanner/: __init__.py  heuristics.py  ignore_policy.py  inventory.py  normalizer.py  persistence.py  pipeline.py  source_resolver.py  tool_runners.py
src/repoclinic/schemas/: __init__.py  analysis_models.py  base.py  enums.py  flow_models.py  input_models.py  output_models.py  (+1 more)
tests/e2e/: test_acceptance_matrix.py
tests/integration/: test_cli_workflow.py  test_flow_orchestration.py  test_run_manifest.py  test_scanner_pipeline.py
tests/unit/: test_artifact_generator.py  test_branch_executor.py  test_cli_smoke.py  test_config_loader.py  test_context_compactor.py  test_crew_output_normalization.py  test_inventory_engine.py  test_model_factory.py  test_redaction.py  test_retry_executor.py  test_runtime_env.py  test_schema_contracts.py  test_source_resolver.py  test_token_budget.py  test_tool_runners.py  test_tracing.py
(+4 files in other folders)
