[project]
name = "repoclinic"
version = "0.1.0"
description = "Stateful CrewAI pipeline for deterministic repository analysis"
readme = "README.md"
authors = [
    { name = "Prayag Bhattarai", email = "bhattaraiprayag@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.9.3",
    "langfuse>=3.14.4",
    "litellm>=1.75.3",
    "orjson>=3.11.7",
    "pathspec>=1.0.4",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "typer>=0.23.1",
    "semgrep>=1.79.0",
    "bandit>=1.9.3",
]

[project.scripts]
repoclinic = "repoclinic:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "types-PyYAML>=6.0.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
